--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
